# MedSim

./: .env.example  .gitattributes  .gitignore  BUILD_STATE.md  BUILD_STATE_V6.md  CLAUDE.md  CONTINUATION.md  LAN_TEST.md  LAN_TEST_V7.md  pyproject.toml  rekey_vault.py  run_portal.py
.claude/: launch.json  settings.json
.github/workflows/: ci.yml  e2e.yml
context/memory/: 2026-06-11.md  2026-06-12.md  2026-06-21.md
data/debriefs/: 2Txi0KHUq4E.json  932HfUwJdqQ.json  CewnMqrnvYM.json  HD_jVSUnNxM.json  HoIcRrHqhHI.json  XGVHoOgJl-w.json  b-kf5tv95hg.json  maZ2w23yyQs.json  wJSQ_ijbLdc.json
docs/: CERTIFICATES-AND-NETWORK-CHANGES.md  DESIGN-2026-06-14-physiology-source-authority.md  FR-012-field-script.md  FR-013-local-context-and-scenario-gen.md  FR-015-clinical-report-generator.md  FR-016-intercom-live-audio.md  FR-017-FR-019-field-script.md  FR-017-scenario-exchange.md  FR-018-scenario-support-documents.md  FR-019-network-status.md  GUI-field-script.md  PLAN-2026-06-10-doctor-orders-and-control-split.md  PLAN-2026-06-14-advanced-devices.md  SECURITY-auth-rollout.md
docs/FR-019-network-status/: MedSim Device Topology.dc.html  README.md  sample_payload.json  schema.ts
docs/module_guides/: M00_sibling_clone.md  M01_schema_v4.md  M02_dataclasses_and_rename.md  M03_route_refactor.md  M04_room_api.md  M05_charge_nurse_dashboard.md  M06_wizard_room_mode.md  M07_scenes_engine.md  M08_student_roster_persistence.md  M09_student_join_flow.md  M10_mvp_gate.md  M11_activity_catalog.md  M12_activity_routes_and_wizard.md  M13_dual_chart_mode.md  M14_cohort_debrief_data.md  M15_cohort_debrief_ui.md  M16_websocket_transport.md  M17_M18_M19_cost_observer_capacity.md  M20_M21_playwright_and_release_gate.md  M31_wizard_depth_and_per_encounter_qrs.md  M32_room_mode_skips_single_steps.md  M33_characters_voices_engage.md  M34_per_encounter_ehr_launch.md  M35_master_controls_and_engage.md  M36_nurse_station_launch.md  M37_tts_audio_reset.md  M38_anthropic_key_live_refresh.md  M39_engage_in_encounter_modal.md  M40_room_row_prepopulate.md  M41_qr_print_sheet.md  M42_inline_device_manager.md  M43_device_routes_multi_patient.md  M44_devices_modal_scope_and_cart_setup.md  M45_inline_device_control_cards.md  M46_modal_footer_and_device_qrs.md  M47_room_level_med_carts.md  M48_thresholds_cadence_ecg.md  M49_clinical_alarm_sounds.md  M50_silence_clear_bp_danger_codeblue.md  M51_patient_integrated_alarm.md  (+8 more)
docs/support/: CHANGELOG.md  MAINTENANCE.md  faq.html  operator-guide.html  render.py
field validation/: MedSimVRAI_Field-Test-Matrix.xlsx  MedSimVRAI_Validation-Checklist.xlsx
launchers/mac/: Start Portal (iPad mode).command  Start Portal.command
launchers/windows/: Start Portal (iPad mode).bat  Start Portal.bat
portal/: __init__.py  activities.py  alarm_sounds.py  alarms.py  auth.py  authored_content.py  budgets.py  control_room.py  control_session.py  credentials.py  debrief.py  doc_summary.py  ecg.py  ehr_db.py  ehr_seed.py  example.py  future_devices.py  handoff.py  handoff_eval.py  handoff_routes.py  intercom.py  library.py  local_context.py  local_context_ingest.py  med_error_routes.py  med_errors.py  med_orders.py  med_routes.py  medical_records.py  ncjmm.py  network_status.py  physiology.py  qrgen.py  readiness.py  report_gen.py  room_stt.py  runtime.py  scanned_docs.py  scenario_docs.py  scenario_exchange.py  (+13 more)
portal/compare/: __init__.py  rubric.py  rules.py  rules_devices.py  score.py  synonyms.json
portal/data/: azure_voice_map.json  clinical_ranges.json  drug_doses.json  modules.json  (+10 more)
schemas/: character.json  chart_event.schema.json  chart_seed.schema.json  comparison_report.schema.json  module.schema.json  persona.schema.json  scenario.json
scripts/: cert-doctor.sh  dev_cert.py  make-dev-cert.sh  md_to_pdf.py  preflight.sh  reset.sh  run_cards.sh  serve.sh  start.sh  trust-ca-mac.sh  trust-ca-windows.ps1
tests/: conftest.py  test_chart_seeding.py  test_compare_rules.py  test_device_db.py  test_device_debrief.py  test_device_engines.py  test_device_pause_resume.py  test_device_routes.py  test_e2e_v3.py  test_ehr_db.py  test_ehr_seed.py  test_ehr_ui.py  test_hub_offline_replay.py  test_voices.py
vrai-faces/: .gitignore  Memory_management.MD  README.md  package.json  pnpm-lock.yaml
(+503 files in other folders)
