[project]
name = "medsim8"
version = "8.0.0a0"
description = "MEDSIM 8 (Medsim-VRAI) — Forked from MEDSIM 7. Adds the VRAI Faces tablet-facing avatar surface: translucent 3D facial framework rendered in Chrome, QR-launched on tablets, lip-synced + emotion-driven from MEDSIM speech output. Preserves all V7 capabilities (ControlRoom, multi-patient, EHR, devices, voice, debrief). VRAI Faces lives under vrai-faces/ as a pnpm workspace; portal exposes /qr/face/&lt;characterId&gt; launchers."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
  # room-STT route-contract tests (tests/v8/test_room_stt.py) stub the whisper
  # engine but still exercise the real numpy PCM decode (room_stt.py:_transcribe);
  # in production numpy arrives with the STT engine, so it must be declared here
  # for the model-free CI test job, which installs only ".[dev,serve]".
  "numpy>=1.24",
]
kb = [
  "chromadb>=0.5",
  "voyageai>=0.2",
]
serve = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "cryptography>=42",
  "itsdangerous>=2.1",
  "segno>=1.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["blocks*", "portal*"]

[tool.setuptools.package-data]
portal = [
  "data/*.json",
  "templates/*.html",
  "static/*",
  "static/devices/*",
  "static/devices/**/*",
  "ehr/*/*.html",
  "ehr/*/*.jsx",
  "ehr/*/*.js",
  "ehr/*/*.json",
  "ehr/*/*.py",
  "compare/*.json",
  "devices/*.py",
  "devices/engine/*.py",
  "devices/pumps/**/*",
  "devices/cabinets/**/*",
]
